        Previously if SYNC_BASE_URL was not found an exception was raised. Help to create remove without needing URLs.

    user visible changes, admin:
    * depend command: added a message at the end so we know output was created OK.
    * stage2svn command: added check to prevent adding files or folder with character ','.

15/3/2015 0.10.0.4
    user visible changes, client:
    * Better, more meaningful progress messages.
    * GUIDs that have upper case characters are converted to lower case.
    * HAVE_INFO_MAP_PATH file is copied to the SITE_HAVE_INFO_MAP_PATH for possible usage by remove command.
    * SITE SITE_HAVE_INFO_MAP_PATH is used by remove if HAVE_INFO_MAP_PATH was not found. This was done because when removing installation that was done from offline folder, Central will not pass LOCAL_REPO_SYNC_DIR to instl. HAVE_INFO_MAP_PATH depends on LOCAL_REPO_SYNC_DIR.
    * New variable HAVE_INFO_MAP_FILE_NAME, used by HAVE_INFO_MAP_PATH, NEW_HAVE_INFO_MAP_PATH, SITE_HAVE_INFO_MAP_PATH.
    * Added time measurements to create urls
    * Sync command: When no files to sync created batch file will have one progress item: "Done Sync".
    * Sync command: When no dirs to create no prgress items will be created.
    * Sync using info_map with prepared URLs.
        if variable FILES_AND_URLS_INFO_MAP_URL is available this file will be read instead of the one in INFO_MAP_FILE_URL.
    user visible changes, admin:
    * Admin variable MAX_FILE_SIZE renamed MIN_FILE_SIZE_TO_WTAR.
    * New admin variable: WTAR_BY_FILE_SIZE_EXCLUDE_REGEX. Files names passing this regex will not be wtarred. This was done mainly to disable wtarring of instl itself when updating it.
    * Variable WTAR_REGEX split in to twp: FOLDER_WTAR_REGEX, FILE_WTAR_REGEX to allow separation between files and folders when choosing what to wtar.
    * repo rev file has new variable INDEX_URL_RELATIVE_PATH, for the convenience of the secure URL creating code.